// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`e2e flow snapshot — ai-observability > walks intro → health → auth → run → outro → skills 1`] = `
{
  "profile": {
    "ask": "first",
    "healthCheck": "dismiss",
    "mcp": "skip",
    "setup": "first",
    "skills": "delete",
    "slack": "skip",
  },
  "program": "ai-observability",
  "trace": [
    {
      "action": "confirm_setup",
      "screen": "ai-observability-intro",
    },
    {
      "action": "dismiss_outage",
      "screen": "health-check",
    },
    {
      "action": "(external)",
      "screen": "auth",
    },
    {
      "action": "(external)",
      "screen": "run",
    },
    {
      "action": "dismiss_outro",
      "screen": "outro",
    },
    {
      "action": "keep_skills",
      "screen": "keep-skills",
    },
  ],
}
`;

exports[`e2e flow snapshot — metrics > walks intro → health → auth → run → outro → skills 1`] = `
{
  "profile": {
    "ask": "first",
    "healthCheck": "dismiss",
    "mcp": "skip",
    "setup": "first",
    "skills": "delete",
    "slack": "skip",
  },
  "program": "metrics",
  "trace": [
    {
      "action": "confirm_setup",
      "screen": "metrics-intro",
    },
    {
      "action": "dismiss_outage",
      "screen": "health-check",
    },
    {
      "action": "(external)",
      "screen": "auth",
    },
    {
      "action": "(external)",
      "screen": "run",
    },
    {
      "action": "dismiss_outro",
      "screen": "outro",
    },
    {
      "action": "keep_skills",
      "screen": "keep-skills",
    },
  ],
}
`;

exports[`e2e flow snapshot — posthog-integration > Next.js (with a setup question) walks a stable path 1`] = `
{
  "profile": {
    "ask": "first",
    "healthCheck": "dismiss",
    "mcp": "skip",
    "notice": "keep",
    "setup": "first",
    "skills": "delete",
    "slack": "skip",
  },
  "program": "posthog-integration",
  "trace": [
    {
      "action": "confirm_setup",
      "screen": "intro",
    },
    {
      "action": "dismiss_outage",
      "screen": "health-check",
    },
    {
      "action": "choose",
      "screen": "setup",
    },
    {
      "action": "(external)",
      "screen": "auth",
    },
    {
      "action": "(external)",
      "screen": "run",
    },
    {
      "action": "dismiss_outro",
      "screen": "outro",
    },
    {
      "action": "set_mcp_outcome",
      "screen": "mcp",
    },
    {
      "action": "dismiss_slack",
      "screen": "slack-connect",
    },
    {
      "action": "keep_skills",
      "screen": "keep-skills",
    },
  ],
}
`;

exports[`e2e flow snapshot — posthog-integration > Node (no setup question) walks a stable path 1`] = `
{
  "program": "posthog-integration",
  "trace": [
    {
      "action": "confirm_setup",
      "screen": "intro",
    },
    {
      "action": "dismiss_outage",
      "screen": "health-check",
    },
    {
      "action": "(external)",
      "screen": "auth",
    },
    {
      "action": "(external)",
      "screen": "run",
    },
    {
      "action": "dismiss_outro",
      "screen": "outro",
    },
    {
      "action": "set_mcp_outcome",
      "screen": "mcp",
    },
    {
      "action": "dismiss_slack",
      "screen": "slack-connect",
    },
    {
      "action": "keep_skills",
      "screen": "keep-skills",
    },
  ],
}
`;

exports[`e2e flow snapshot — warehouse-source > walks intro → auth → run → outro → skills 1`] = `
{
  "profile": {
    "ask": "first",
    "askAnswers": [
      {
        "match": "prefix",
        "value": "\${E2E_SOURCE_PREFIX}",
      },
      {
        "match": "stripe",
        "secret": true,
        "value": "\${E2E_STRIPE_API_KEY}",
      },
      {
        "match": "host|hostname|server|endpoint",
        "value": "\${E2E_PG_HOST}",
      },
      {
        "match": "port",
        "value": "\${E2E_PG_PORT}",
      },
      {
        "match": "database|db_?name",
        "value": "\${E2E_PG_DATABASE}",
      },
      {
        "match": "password|passwd|pwd",
        "secret": true,
        "value": "\${E2E_PG_PASSWORD}",
      },
      {
        "match": "user|username|role",
        "value": "\${E2E_PG_USER}",
      },
      {
        "match": "schema",
        "value": "public",
      },
    ],
    "healthCheck": "dismiss",
    "mcp": "skip",
    "notice": "keep",
    "setup": "first",
    "skills": "delete",
    "slack": "skip",
  },
  "program": "warehouse-source",
  "trace": [
    {
      "action": "confirm_setup",
      "screen": "warehouse-intro",
    },
    {
      "action": "(external)",
      "screen": "auth",
    },
    {
      "action": "(external)",
      "screen": "run",
    },
    {
      "action": "dismiss_outro",
      "screen": "outro",
    },
    {
      "action": "keep_skills",
      "screen": "keep-skills",
    },
  ],
}
`;
